<resources>
    <string name="app_name">NumberGuesser</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_button_text">Start the game</string>
    <string name="start_game_text">Try to guess the number!</string>
    <string name="number_is_less">Number is less than </string>
    <string name="number_is_greater_than">Number is greater than </string>
    <string name="try_button_text">Guess!</string>
    <string name="game_won_text">You\'ve guessed the number! The answer is</string>
    <string name="start_new_game_text">New game!</string>
    <string name="plus">+</string>
    <string name="minus">–</string>
    <string name="numberOfGuesses">Guesses:</string>
</resources>